tests/baselines/reference/internalImportInstantiatedModuleNotReferencingInstance.errors.txt
internalImportInstantiatedModuleNotReferencingInstance.ts(8,16): error TS2437: Module 'A' is hidden by a local declaration with the same name.


==== internalImportInstantiatedModuleNotReferencingInstance.ts (1 errors) ====
    module A {
        export interface X { s: string }
        export var a = 10;
    }
    
    module B {
        var A = 1;
        import Y = A;
                   ~
!!! error TS2437: Module 'A' is hidden by a local declaration with the same name.
    }
    